server port + url

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=app-about-company
 
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=https://good-pizzeria-app.herokuapp.com/
 management.security.enabled=false
