--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -2,3 +2,10 @@ spring.application.name=app-about-company
 
 spring.cloud.config.uri=https://good-pizzeria-app.herokuapp.com/
 management.security.enabled=false
+
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+
+#eureka.client.serviceUrl.defaultZone  = https://training-eureka-server.herokuapp.com/
+eureka.client.instance.preferIpAddress = true
+
+
